--- a/style.css
+++ b/style.css
@@ -8,9 +8,11 @@ body {
     background-color: lightgreen;
     height: 100vh;
     font-family: Helvetica, sans-serif;
-    display: flex;   
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1rem;
 }
 
 .board {
@@ -48,4 +50,26 @@ body {
     background-size: 80%;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+#result {
+    width: 200px;
+    height: 2rem;
+    font-size: 1.5rem;
+    color: white;
+    text-align: center;
+}
+
+button {
+    background-color: yellowgreen;
+    border: none;
+    border-radius: 0.5rem;
+    font-family: inherit;
+    font-size: 1.5rem;
+    padding: 0.7rem 1rem;
+}
+
+button:hover {
+     cursor: pointer;
+     background-color: green;
 }
